lab2_pwm/hw1_zybo.sdk/.metadata/.plugins/org.eclipse.cdt.ui/gpio_tutorial.build.log
22:34:13 **** Auto Build of configuration Debug for project gpio_tutorial ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../gpio_tutorial_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:12:17: error: 'XPAR_TEST_CORE_0_S00_AXI_BASEADDR' undeclared (first use in this function)
 reg1 = Xil_In32(XPAR_TEST_CORE_0_S00_AXI_BASEADDR+0);
                 ^
../src/helloworld.c:12:17: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/helloworld.o] Error 1

22:34:13 Build Finished (took 310ms)

